--- a/Blip/Avalonia/Extensions/ExTitleBar.axaml
+++ b/Blip/Avalonia/Extensions/ExTitleBar.axaml
@@ -1,4 +1,4 @@
-<Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:ex="https://github.com/blippyblips/ex">
+<Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:ex="https://github.com/blippyblips/Blip.Avalonia.Extensions">
   <Design.PreviewWith>
     <Border Width="300" Height="30">
       <ex:ExTitleBar Background="SkyBlue" Foreground="Black" />
